@@ -1,46 +1,43 @@
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
-package model.classes;
+package controller;
 
-/**
- *
- * @author hanschristian
- */
+import javax.swing.*;
 import java.sql.Connection;
 import java.sql.DriverManager;
-import java.sql.SQLException;
-import java.util.TimeZone;
-import javax.swing.JOptionPane;
 
 public class DatabaseHandler {
-
     public Connection con;
     private String driver = "com.mysql.cj.jdbc.Driver";
-
-    //private String url = "jdbc:mysql://localhost/restoran";
-    private String url = "jdbc:mysql://localhost/restoran?serverTimezone=UTC&useSSL=false";
+    private String url = "jdbc:mysql://localhost/restoran";
     private String username = "root";
     private String password = "";
 
+    private static DatabaseHandler instance;
+
+    public static DatabaseHandler getInstance() {
+        if (instance == null) {
+            synchronized (DatabaseHandler.class) {
+                if (instance == null) {
+                    instance = new DatabaseHandler();
+                }
+            }
+        }
+        return instance;
+    }
+
     private Connection logOn() {
         try {
-            Class.forName(driver).newInstance();
+            Class.forName(driver).getDeclaredConstructor().newInstance();
             con = DriverManager.getConnection(url, username, password);
         } catch (Exception ex) {
-            // handle any errors
             System.out.println("SQLException: " + ex.getMessage());
             System.out.println("SQLState: " + ex.getLocalizedMessage());
-            JOptionPane.showMessageDialog(null, "Error Ocurred when login" + ex);
+            JOptionPane.showMessageDialog(null, "Error Ocurred when login " + ex);
         }
         return con;
     }
 
     private void logOff() {
         try {
-            //tutup koneksi
             con.close();
         } catch (Exception ex) {
             JOptionPane.showMessageDialog(null, "Error Ocurred when login" + ex);
@@ -63,3 +60,4 @@ public class DatabaseHandler {
         }
     }
 }
+
